# powerBot

./: .gitignore  Dockerfile  README.md  VERSION  config.example  config.toml.example  docker-compose.yml  kube.yaml  main.py  pyproject.toml  requirements.txt  runbot.py
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  pylint.yml  test_build_publish.yml
config/: config.example
powerbot/: __init__.py  runbot.py
powerbot/opt/qds/: Cargo.toml
powerbot/opt/qds/src/: main.rs
powerbot/src/: bot.py  helpers.py
powerbot/src/integrations/: conversion.py  macvendor.py  reddit.py  wfp.py
scripts/: keepAlive.sh
src/: bot.py  helpers.py  lists.py  reddit.py  runbot.py  spotify.py
src/app/: bot.py  reddit.py  spotify.py  wfp.py
src/app/integrations/: reddit.py
src/config/: blocklist.example  config.example
src/main/: bot.py  helpers.py  reddit.py  spotify.py  wfp.py
src/opt/qds/: Cargo.toml
src/opt/qds/src/: main.rs
