[package]
name = "qds"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
image = "0.24.7"

# makes image lib faster for dev
[profile.dev-unopt]
inherits = "dev"
opt-level = 3

# Ref: https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
lto = true